# autosheets

./: .gitignore  README.rst  package-lock.json  package.json  pyproject.toml  serverless.yml
autosheets/: autosheets.py  handler.py
